Fixed crashing when picking worldwide, Fixed Maps not showing correctly, fixed wrong formatting in country popup

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,11 @@ body{
   scrollbar-width: none;  /* Firefox */
 }
 
+.app-wrapper{
+  display: flex;
+  flex-direction: column;
+}
+
 .app{
   display: flex;
   
