--- a/src/Map.css
+++ b/src/Map.css
@@ -13,6 +13,8 @@
 .info-flag img {
     width: 100px;
     border-radius: 5px;
+    object-fit: cover;
+    height: 100%;
   }
   
   .info-name {
@@ -26,7 +28,7 @@
   }
   
   .info-flag {
-    height: 80px;
+    height: 100%;
     width: 100%;
     background-size: cover;
     border-radius: 8px;
